Added Main Menu and Displayed Boss Health